# pindouverse

./: .gitignore  LICENSE  LICENSE-CODE  README.md  package-lock.json  package.json  vite.config.ts
samples/: 2080.pindou  LICENSE  asuka100x100_v4_new.pindou  asuka_hat.pindou  captain_tsubasa.pindou  deathnote-kami.pindou  deathnote-l.pindou  deniya1.pindou  deniya2.pindou  dinosaur-brachiosaurus.pindou  dinosaur-pterosaur.pindou  dinosaur-raptor.pindou  dinosaur-rex.pindou  dinosaur-triceratops.pindou  fern.pindou  fern_sharp.pindou  fern_sharp_thin.pindou  fma-alphonse.pindou  fma-edward.pindou  frieren-blue.pindou  frieren.pindou  fu13.pindou  furina-loyalty.pindou  furina100x100.pindou  hogwarts.pindou  hogwarts2.pindou  inuyasha-small.pindou  inuyasha-tessaiga.pindou  inuyasha.pindou  kagome.pindou  kagome2.pindou  kagome_small.pindou  kikyou.pindou  levi-kick.pindou  maga.pindou  mikasa-heart.pindou  naruto.pindou  noodle.pindou  qibao_104.pindou  qibao_h82.pindou  (+6 more)
scripts/: batch-preview.mjs  detect-grid.mjs  gen-icon-candidates.mjs  gen-watermark-preview.mjs  gen_icon.py  simplify-colors.mjs  upscale.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: blueprint_import.rs  blueprint_test.rs  github_auth.rs  image_decorations.rs  image_export.rs  image_import.rs  mobile.rs  mod.rs  project.rs
src-tauri/tests/: blueprint_3rdparty.rs  blueprint_all_samples.rs  blueprint_real_image.rs
src-tauri/tests/fixtures/: kagome_truth.json
(+115 files in other folders)
