[package]
name = "pindouverse"
version = "0.1.0"
description = "拼豆宇宙 - PindouVerse Pixel Art Editor for Perler Beads"
authors = ["xiaofeicheng"]
edition = "2021"

[lib]
name = "pindouverse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
chrono = "0.4"
dirs = "5"
once_cell = "1"
